# Universal-Graph-Machine

./: .gitignore  README.md  _flip_plugin.py  pyproject.toml
bench/: coverage_audit.py  loudon_lion_corpus.py  loudon_refusal_log.md  proofwriter_coverage.py  proofwriter_nl.py  recall_autofire.py  session_accretion.py  spike_accumulator.py  spike_authoritativeness.py  spike_binder.py  spike_causation_representation.py  spike_derivation_frame.py  spike_derivation_frame_vision.py  spike_discriminating_question.py  spike_epistemic_closure.py  spike_fact_identity.py  spike_facts_as_truth_bearers.py  spike_force_coverage.py  spike_governor.py  spike_grammar_fold.py  spike_grammar_subkind.py  spike_help_flare.py  spike_homoiconic_grammar.py  spike_interpretation_scope.py  spike_k2_intersection.py  spike_live_agent_loop.py  spike_loudon.py  spike_loudon_grammar.py  spike_loudon_prose.py  spike_predicate_reification.py  spike_push_pull_unification.py  spike_reactive_derive.py  spike_reactive_frame.py  spike_reactive_robustness.py  spike_rule_learning.py  spike_scope_causation_repA.py  spike_scope_local_identity.py  spike_threshold_no_tool.py  wordnet_messy.py  wordnet_scaling.py
book/: .gitignore  README.md  mkdocs.yml
corpus/: barista_kb.cnl  cards_frontier_kb.cnl  cards_kb.cnl  cards_reasoning.cnl  cards_scenarios.txt  coffee_kb.cnl  governor.cnl  icecream.cnl  lion_grammar.cnl  loudon_grammar.cnl  planning.cnl  planning_detect.cnl  planning_execution.cnl  planning_requests.cnl  planning_teardown.cnl  policy.cnl  preference.cnl  procedure.cnl  recovery.cnl  risk.cnl  walker.cnl
demos/: 01_basics.cnl  README.md  run.py  (+5 more)
(+313 files in other folders)
